--- a/requirements.txt
+++ b/requirements.txt
@@ -1,31 +1,32 @@
 Brotli==1.0.9
-click==7.1.2
-dash==1.18.1
-dash-core-components==1.14.1
-dash-html-components==1.1.1
-dash-renderer==1.8.3
-dash-table==4.11.1
-dominate==2.6.0
-Flask==1.1.2
-Flask-Compress==1.8.0
-Flask-WTF==0.14.3
-future==0.18.2
-gunicorn==20.0.4
-itsdangerous==1.1.0
-Jinja2==2.11.2
-joblib==1.0.0
-MarkupSafe==1.1.1
-numpy==1.19.4
-pandas==1.1.5
-plotly==4.14.1
-python-dateutil==2.8.1
-pytz==2020.5
-retrying==1.3.3
-scikit-learn==0.23.2
-scipy==1.5.4
-six==1.15.0
-sklearn==0.0
-threadpoolctl==2.1.0
-visitor==0.1.3
-Werkzeug==1.0.1
-WTForms==2.3.3
+click==8.1.4
+dash==2.11.1
+dash-auth==2.0.0
+dash-bootstrap-components==1.4.2
+dash-core-components==2.0.0
+dash-html-components==2.0.0
+dash-renderer==1.9.1
+dash-table==5.0.0
+Flask==2.2.5
+Flask-Compress==1.13
+Flask-WTF==1.1.1
+gunicorn==20.1.0
+itsdangerous==2.1.2
+Jinja2==3.1.2
+joblib==1.3.1
+MarkupSafe==2.1.3
+numba==0.57.1
+numpy==1.24.4
+pandas==2.0.3
+plotly==5.15.0
+python-dateutil==2.8.2
+pytz==2023.3
+retrying==1.3.4
+scikit-learn==1.3.0
+scipy==1.11.1
+six==1.16.0
+slicer==0.0.7
+threadpoolctl==3.1.0
+Werkzeug==2.2.3
+WTForms==3.0.1
+wtforms-html5==0.6.1
